--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
         <div class="container hero-content">
             <h1>A different kind of equity.</h1>
             <div class="hero-buttons">
-                <a href="#portfolio" class="btn btn-primary">Our Portfolio</a>
+                <a href="#portfolio" class="btn btn-primary">Portfolio</a>
             </div>
         </div>
     </section>
