Added Dominion Groups

--- a/index.html
+++ b/index.html
@@ -862,6 +862,12 @@
                         <img src="images/Mosaic Logo_1 full color dark.png" alt="Mosaic Property Group Logo">
                     </div>
                 </div>
+                
+                <div class="brand-item" data-company="dominion-groups">
+                    <div class="brand-logo">
+                        <img src="images/Dominion Groups Logo_full color dark.png" alt="Dominion Groups Logo">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -927,6 +933,13 @@
                 description: 'Mosaic Property Group holds real estate like commercial properties and short-term rentals. ',
                 link: '#',
                 logo: 'images/Mosaic Logo_1 full color dark.png',
+                logoStyle: ''
+            },
+            'dominion-groups': {
+                name: 'Dominion Groups',
+                description: 'Coming soon.',
+                link: '#',
+                logo: 'images/Dominion Groups Logo_full color dark.png',
                 logoStyle: ''
             }
         };
